hopefully the FINAL commit

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Maternal mortality rate:</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
+                            <img class="img-fluid d-block mx-auto" src="startbootstrap-agency-gh-pages/img/portfolio/01-full.jpg" alt="">
                             <p>When asked to estimate the rate of maternal deaths in their country, only 6% of policymakers came within 20% of the most recently available figure.</p>
                             <ul class="list-inline">
                             </ul>
@@ -322,7 +322,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Early marriage rate:</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
+                            <img class="img-fluid d-block mx-auto" src="startbootstrap-agency-gh-pages/img/portfolio/02-full.jpg" alt="">
                             <p>On the rates of early marriage for girls, just a quarter of policymakers came within 20% of the most recently available figure. </p>
                             <ul class="list-inline">
                             </ul>
@@ -353,7 +353,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Share of women in the labour force:</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
+                            <img class="img-fluid d-block mx-auto" src="startbootstrap-agency-gh-pages/img/portfolio/03-full.jpg" alt="">
                             <p>When estimating the share of women in the labour force, 31% of policymakers came within 20% of the most recently available figure.</p>
                             <ul class="list-inline">
                             </ul>
@@ -384,7 +384,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">The priority of Gender Equality </h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
+                            <img class="img-fluid d-block mx-auto" src="startbootstrap-agency-gh-pages/img/portfolio/04-full.jpg" alt="">
                             <p>When combining response categories "high" and "very high" priority education and health stand out as being most-often cited as priorities (81% and 67% respectively).</p>
                             <ul class="list-inline">
                             </ul>
@@ -415,7 +415,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Attention given to gender equality</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
+                            <img class="img-fluid d-block mx-auto" src="startbootstrap-agency-gh-pages/img/portfolio/05-full.jpg" alt="">
                             <p>There is a considerable difference in the responses given by women and men. Two in three women support the statement that there is "too little attention" to gender issues in policymaking, whereas just one in three men felt the same way. </p>
                             <ul class="list-inline">
                             </ul>
@@ -446,7 +446,7 @@
                             <!-- Project Details Go Here -->
                             <h2 class="text-uppercase">Women in the labour force</h2>
                             <p class="item-intro text-muted"></p>
-                            <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+                            <img class="img-fluid d-block mx-auto" src="startbootstrap-agency-gh-pages/img/portfolio/06-full.jpg" alt="">
                             <p></p>
                             <ul class="list-inline">
                             </ul>
